deploy/grafana-ingress.yaml
# --- Grafana HTTPS ingress ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-https
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.mibo.monster
