deploy/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-client-http
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mibo.monster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mibo-client
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-client-https
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
  - host: mibo.monster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mibo-client
            port:
              number: 80
  tls:
  - hosts:
    - mibo.monster
